--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "http2": "^3.3.7",
+    "js-yaml": "^3.13.1",
     "next": "^8.1.0",
     "now": "^16.2.0",
     "react": "^16.8.5",
